# pp

./: pyproject.toml
preprocessor/: __main__.py  main.py
preprocessor/dblogging/: __init__.py  dblogger.py
preprocessor/file_utils/: __init__.py
preprocessor/snowflake/: schema.py
preprocessor/utils/: preprocessor_utils.py
resources/: config.yaml
